data/all_generated_tests/raw_wast_tests/unreachable_IncorrectConditionEvaluation_1320.wast
;; 1. **Test Description:**    - Create a WebAssembly module with an `unreachable` instruction inside an `if` condition that relies on a false condition (e.g., 0). Check if the engine traps immediately without continuing to the false branch instructions.    - Constraint: Tests condition evaluation in branching and immediate trapping by `unreachable`.    - Relation to Incorrect Condition Evaluation: Ensures `unreachable` within a false path does not erroneously execute due to positional tracking issues.

(assert_invalid
  (module
    (func $test_unreachable_in_false_branch
      (if (result i32)
        (i32.const 0)
        (then (unreachable))
        (else (i32.const 1))
      )
    )
  )
  "type mismatch"
)